<resources>

    <string name="app_name">goText</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Wizard</string>
    <string name="welcome">Welcome to goText Rukun!</string>
    <string name="app_descr">This is the first time you run goText on your device. In order to configure it, please press on Next button</string>
    <string name="button_next">Next</string>
    <string name="button_select">Select</string>
    <string name="text_lang">Language:</string>
    <string name="default_int_prefix">International Prefix:</string>
    <string name="textview_contacts">To:</string>
    <string name="button_send">Send</string>
    <string name="no_items">No services installed.</string> 
    <string name="menu_exit">Exit</string> 
    <string name="edit_user">Username:</string> 
    <string name="edit_pass">Password:</string> 
    <string name="edit_nick">Sender:</string> 
    <string name="optional">Optional</string>
    <string name="empty_fields">Complete all fields!</string>
    <string name="send_sms">Sending SMS..</string>
    <string name="sent_sms">SMS Sent!</string>
    <string name="error_sms">Error</string>
    <string name="error_sms_sent">SMS not sent</string>
    <string name="services_download">Services Downloaded!</string>
    <string name="services_start">Press OK to start messanging with goText</string>
    <string name="press_ok">Press OK</string>
    <string name="wait">Please wait..</string>
    <string name="retrieving">Retrieving data..</string>
    <string name="preparing_download">Preparing for download..</string>
    <string name="missing_conf">CONFIGURATION MISSING!</string>
    <string name="menu_services">Services Settings</string>
    <string name="menu_download_services">Download Services</string>
    <string name="default_service">Default Service</string>
    <string name="none">None</string>
    <string name="menu_about">About</string>
    <string name="back">Back to the Future</string>
    <string name="progress_retrieved">Retrieved</string>
    <string name="progress_services">services..</string>
    <string name="connect_test">Connectivity Test</string>
    <string name="title_service_settings">Service Settings</string>
    <string name="menu_delete_service">Delete Service</string>
    <string name="apply">Apply</string>
    
    <string-array name="lang_array">
        <item>English</item>
        <item>Italiano</item>
        <item>Español</item>
        <item>Indonesian</item>
        <item>Türk</item>
    </string-array>
    
    

</resources>