<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textview_user"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="@string/edit_user" />

       <EditText
            android:id="@+id/editUser"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:ems="10"
            android:visibility="invisible"
            android:inputType="text" >
</EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textview_pass"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="@string/edit_pass" />

        <EditText
            android:id="@+id/editPass"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:ems="10"
            android:inputType="textPassword" >

            <requestFocus />
        </EditText>

    </LinearLayout>
    
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textview_nick"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="@string/edit_nick" />

        <EditText
            android:id="@+id/editNick"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:ems="10"
            android:visibility="invisible"
            android:inputType="text" >

            <requestFocus />
        </EditText>

    </LinearLayout>

 

      
        <Button 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/but"
        android:onClick="onClick"
        android:enabled="true"
        android:text="@string/button_select"/>


</LinearLayout>